# quasar

./: .gitignore  Cargo.toml  build.rs  client-config.example.toml  config.example.toml  quasar.db
analysis/: memory-wall.ipynb
metrics/: docker-compose.yaml  victoria-metrics.yaml
metrics/grafana/dashboards/: quasar_dashboard.json
metrics/grafana/provisioning/dashboards/: default.yaml
metrics/grafana/provisioning/datasources/: datasource.yaml
src/: config.rs  grpc_server.rs  grpc_service.rs  lib.rs  logging.rs  macros.rs  models.rs  persistence.rs  quasar.proto
src/bank/: interface.rs
src/ledger/: error.rs  interface.rs  ledger.rs  mod.rs
src/metrics/: handler.rs  mod.rs  server.rs
src/models/: key.rs  user.rs
src/protos/: server.proto
src/transaction_processor/: error.rs  interface.rs  mod.rs
