[package]
name = "quasar"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }

# Http server
axum = "0.8.6"

# gRPC
tonic = "0.14.2"
prost = "0.14.1"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tonic-prost = "0.14.2"

clap = { version = "4.5.47", features = ["derive"] }
config = "0.15.18"
rand = "0.9.2"
prometheus = "0.14.0"
lazy_static = "1.5.0"
reqwest = "0.12.24"
prometheus-reqwest-remote-write = "0.4.0"
hostname = "0.4.1"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
